deploy/kubernetes/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nsfl-job-scheduler
  name: nsfl-job-scheduler
  namespace: default
spec:
  ports:
  - port: 8088
    targetPort: 8088
  selector:
    app: nsfl-job-scheduler
