deploy/kubernetes/template/ingress-model-manager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: MODEL_MANAGER
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/namespaces/(.*)/models
        backend:
          serviceName: MODEL_MANAGER
          servicePort: PORT
      - path: /api/v1/namespaces/(.*)/models/(.*)
        backend:
          serviceName: MODEL_MANAGER
          servicePort: PORT
      - path: /api/v1/models*
        backend:
          serviceName: MODEL_MANAGER
          servicePort: PORT
